--- a/portofolio/styleimage.css
+++ b/portofolio/styleimage.css
@@ -4,40 +4,10 @@
     box-sizing: border-box;
 }
 
-:root {
-    --bg-color: #1f242d;
-    --second-bg-color: #323946;
-    --text-bg-color: #fff;
-    --main-bg-color: #0ef;
-}
-
-html {
-    font-size: 62.5%;
-    overflow-x: hidden;
-}
-
-body {
-    background: var(--bg-color);
-    color: var(--text-bg-color);
-}
-
 .container {
-    width: 100%;
+    position: relative;
     min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 50px 8%;
-}
-
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
-}
-
-.gallery img {
-    width: 100%;
+    background: #111;
 }
 
 .container .image-container {
